# imgcat

./: .env.example  .gitignore  DEVELOPMENT_SETUP.md  generate-jwt-certs.ps1  generate-jwt-certs.sh  list_of_all_docker_ports.txt
backend/: ic-generic-rust-svc.container  makefile  posts.container  users.container
backend/auth_service/: Cargo.toml  Makefile  auth.container  auth_from_local.container  ic_error.rs
backend/auth_service/src/: age_verification.rs  app_state.rs  health_check.rs  ic_error.rs  libjwt.rs  libpostgres.rs  libredis.rs  login_helpers.rs  main.rs  oauth_routes.rs  provider_google.rs  route_agecheck.rs  route_callback.rs  route_create.rs  route_my_preferences.rs  route_namefree.rs  route_provider.rs  route_refresh.rs
backend/auth_service/src/ic_postgres/: account_data.rs  account_preferences.rs  app_state.rs  content_level.rs  content_weight.rs  get_account_preferences.rs  mod.rs  set_account_preferences.rs  visibility_level.rs
backend/libs/ic_actix/: Cargo.toml
backend/libs/ic_actix/src/: app_state_mariadb.rs  app_state_postgres.rs  app_state_redis.rs  cookie.rs  error_actix.rs  header_helpers.rs  ic_error.rs  lib.rs  user_ban.rs
backend/libs/ic_jwt/: Cargo.toml
backend/libs/ic_jwt/src/: age_verification.rs  auth_jwt.rs  common.rs  decode_jwt.rs  encode_jwt.rs  keys.rs  lib.rs  refresh_jwt.rs  signup_jwt.rs
backend/posts_service/: Cargo.toml
backend/posts_service/src/: main.rs  redis_helpers.rs
backend/softmod_actions/: Cargo.toml  Dockerfile  Makefile  readme.txt  softmod.container
backend/softmod_actions/src/: anon_review.rs  conn_helpers.rs  deserialize_helpers.rs  header_helpers.rs  health_check.rs  ic_error.rs  libjwt.rs  main.rs  u64_postgres_converter.rs  vote_category.rs  vote_mature.rs  vote_review.rs  vote_tag.rs
backend/users_service/: Cargo.toml
backend/users_service/src/: main.rs  redis_helpers.rs
backend/users_service/src/db_objects/: mod.rs  user_badge.rs
backend/users_service/src/routes/: get_user_badges.rs  health_check.rs  mod.rs
database/: makefile  mariadb.conf  mariadb.container  postgres.conf  postgres.container
database/mariadb_scripts/: Dockerfile  readme.txt
database/mariadb_scripts/init/: 000_init_users.sh  001_init_db.sql  020_userdb.tables.sql  030_posts.tables.sql  040_comments.tables.sql  050_actions.tables.sql  090_content.tables.sql  091_posts.tables.sql  100_meme.tables.sql  Actions.CreateFavFolder.sql  Actions.GetFavFolders.sql  Actions.IsFavMedia.sql  Actions.IsFavPost.sql  Actions.RenameFavFolder.sql  Actions.ToggleFavMedia.sql  Actions.ToggleFavPost.sql  Comments.GetPostComments.sql  Content.FlagForReview.sql  Content.FlagForReviewAnon.sql  Content.VoteForCategory.sql  Content.VoteForMaturity.sql  Content.VoteForTag.sql  MemeMaker.GetTemplateById.sql  MemeMaker.GetTemplateTags.sql  MemeMaker.GetTemplates.sql  Posts.CreateComment.sql  Posts.CreateSimpleMedia.sql  Posts.CreateSimplePost.sql  Posts.GetMyFavs.sql  Posts.GetMyPosts.sql  Posts.GetMyVote.sql  Posts.GetPost.sql  Posts.SetPostPublic.sql  Posts.SetView.sql  Posts.SetVote.sql  UserDB.CreateAccount.sql  UserDB.GetLoginData.sql  UserDB.GetLoginId.sql  UserDB.IsUserNameFree.sql  ZZZ_init_perms.sql
frontend/: frontend.container  frontend2.container  makefile  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.html  hooks.server.ts
frontend/static/: robots.txt
localdev_deploy/: makefile  nginx.conf  nginx.container  redis.conf
mariadb_scripts/: init_all.ps1  init_users.sql
src/lib/: PostThumb.svelte
src/routes/: +layout.server.ts
(+82 files in other folders)
