[package]
name = "auth_service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
deadpool-postgres = "0.14.1"
env_logger = "0.11.10"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto", "use_pem"] }
openidconnect = { version = "4.0.1", features = ["reqwest"] }
postgres-types = { version = "0.2.13", features = ["derive"] }
redis = { version = "1.2.0", features = [] }
#reqwest = { version = "0.13.2", features = ["blocking"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.1", features = ["rt-multi-thread"] }
tokio-postgres = "0.7.17"
