[package]
name = "users_service"
version = "1.0.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
deadpool-postgres = "0.14.1"
env_logger = "0.11.10"
ic_jwt = { version = "1.0.0", path = "../libs/ic_jwt" }
ic_actix = { version = "1.0.0", path = "../libs/ic_actix", features=["redis", "postgres"] }
#postgres-types = { version = "0.2.13", features = ["derive"] }
redis = { version = "1.2.0", features = [] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = "1.0.150"
serde_repr = "0.1.20"
#tokio = { version = "1.52.1", features = ["rt-multi-thread"] }
#mysql = { version = "28.0.0", features = [] }
#chrono = "0.4.45"
#tokio-postgres = "0.7.17"
